GET game by id